# SDL-Maze-Game

./: CMakeLists.txt  main.cpp
classes/: Entity.cpp  Entity.h  Map.cpp  Map.h  Tile.cpp  Tile.h  program.cpp  program.h
src/: Program.cpp  Program.h  main.cpp
src/UI/: UserInterface.cpp  UserInterface.h
src/classes/: Entity.cpp  Entity.h  Map.cpp  Map.h  Player.cpp  Player.h  Tile.cpp  Tile.h  program.cpp  program.h
src/entities/: Enemy.cpp  Enemy.h  Entity.cpp  Entity.h  Player.cpp  Player.h
src/map/: Map.cpp  Map.h  Tile.cpp  Tile.h
